--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Hello, World!</h1>
     <!-- <i class="fa-solid fa-heart"></i> -->
     <script src="script.js"></script>
   </body>
