--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template</title>
-    <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=jacinto.design">
+    <title>Quote Generator</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://www.google.com/s2/favicons?domain=jacinto.design"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -12,8 +16,31 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <div class="qoute-container" id="qoute-container">
+      <!-- Qoute -->
+      <div class="qoute-text">
+        <i class="fa-solid fa-quote-left"></i>
+        <span id="qoute"
+          ></span
+        >
+        <!-- <i class="fa fa-quote-right"></i> -->
+      </div>
+      <!-- Author -->
+      <div class="qoute-author">
+        <span id="author"></span>
+      </div>
+      <!-- Buttons -->
+      <div class="button-container">
+        <button class="twitter-button" id="twitter" title="Tweet This!">
+          <i class="fab fa-twitter"></i>
+        </button>
+        <button id="new-quote">New Quote</button>
+      </div>
+    </div>
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
     <!-- <i class="fa-solid fa-heart"></i> -->
+    <!-- Script -->
     <script src="script.js"></script>
   </body>
 </html>
